[package]
name = "omni-relayer-fees"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = "0.12.12"
serde_json = "1"

omni-types = { git = "https://github.com/near-one/omni-bridge", package = "omni-types", rev = "06b273b9986abf42e0e9a52ca279c6c3a941c405" }

near-jsonrpc-client = "0.15.1"
alloy = "0.11.1"
